# aws-trainium-tutorial-for-research

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  VALIDATED.md  VERSION_MATRIX.md  pyproject.toml  requirements.txt  setup.py  test_runner.py  test_suite.py
.github/: dependabot.yml
.github/workflows/: ci.yml
advanced/: advanced_patterns_nki.py
docs/: agentic_development_sidequest.md  choose_your_path.md  error_handling_debugging.md  local_setup_guide.md  main_tutorial_doc.md  neuron_tools_and_debugging.md  novel_kernels_on_trainium.md  quick-start.md  trainium_development_best_practices.md
docs/troubleshooting/: common_scenarios.md  interactive_diagnosis.py  performance_debugging.md
docs/video_tutorials/: 01_getting_started.md  02_basic_training.md  03_real_world_application.md  README.md  video_production_guide.md
examples/_legacy/: README.md  nki_optimization.py
examples/_legacy/deployment/: inferentia_serving.py
examples/_legacy/domain_specific/: __init__.py  climate_science.py
examples/_legacy/frameworks/: neuron_library_support.py
examples/_legacy/integration/: github_actions_neuron_ci.yml  kubeflow_neuron_pipeline.py  mlflow_neuron_integration.py
examples/advanced/: nki_optimization.py
examples/benchmarking/: neuron_vs_nvidia_comparison.py
examples/complete_workflow/: README.md  trainium_to_inferentia_pipeline.py
examples/debugging/: README.md  diagnose_common_failures.py
examples/deployment/: inferentia_serving.py
examples/distributed/: README.md  data_parallel_ner.py  tensor_parallel_full_finetune.py
examples/domain_specific/: climate_science.py  domain_specific_examples.py
examples/easter_eggs/: README.md  __init__.py  creative_computing.py  creative_showcase.py  matrix_operations.py  monte_carlo.py  precision_emulation.py
examples/end_to_end/: climate_prediction_pipeline.py
examples/enterprise/: security_compliance_patterns.py
examples/frameworks/: neuron_library_support.py
examples/integration/: github_actions_neuron_ci.yml  kubeflow_neuron_pipeline.py  mlflow_neuron_integration.py
examples/rag_pipeline/: modern_rag_example.py
examples/use_cases/: README.md  _progress.py  antibody_affinity_slm.md  antibody_affinity_slm.py  biomedical_ner.md  biomedical_ner.py  computer_vision_research.py  crystal_cif_slm.md  crystal_cif_slm.py  cv_utilization_spike.md  cv_utilization_spike.py  distill_ner_slm.md  distill_ner_slm.py  financial_modeling.py  genomics_analysis.py  qwen3_lora_finetune.md  qwen3_lora_finetune.py  satellite_landcover.md  satellite_landcover.py
monitoring/: cost_monitoring_dashboard.html
scripts/: aws_environment_checker.py  cost_monitor.py  emergency_shutdown.py  ephemeral_instance.py  setup_budget.py  test_sister_tutorial_comparison.py  validate_end_to_end.py  validate_hardware_performance.py
tests/: __init__.py  conftest.py  test_qwen3_loss_summary.py
tests/integration/: test_cost_tracking_integration.py
tests/unit/: test_budget_setup.py  test_climate_example.py  test_cost_monitor.py  test_ephemeral_instance.py  test_validation_harness.py
validation/: README.md  __init__.py  launcher.py  provenance.py  registry.py  render_status.py  run_on_hardware.py
