[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-trainium-inferentia-tutorial"
version = "2026.1.0"
description = "Complete tutorial and tools for academic research using AWS Trainium and Inferentia chips"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Scott Friedman"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "transformers>=4.40.0",
    "datasets>=2.14.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "flask>=2.3.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "psutil>=5.9.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "coverage[toml]>=7.0.0",
]
# Neuron wheels are published on the AWS Neuron pip index, not PyPI. Install with:
#   pip install torch-neuronx neuronx-cc \
#       --extra-index-url https://pip.repos.neuron.amazonaws.com
# torch / torch-xla are resolved by torch-neuronx; we do not pin them here.
neuron = [
    "accelerate>=0.30.0",
]
science = [
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "rdkit>=2023.3.1",
    "biopython>=1.81",
    "faiss-cpu>=1.7.4",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/scttfrdmn/aws-trainium-tutorial-for-research"
Issues = "https://github.com/scttfrdmn/aws-trainium-tutorial-for-research/issues"

[tool.setuptools]
# This repo is a teaching tutorial, not a conventional library. The scripts under scripts/ are
# meant to be run directly (e.g. `python scripts/cost_monitor.py`) or imported in tests via the
# pytest pythonpath below — not installed as a distributable package.
py-modules = []

[tool.ruff]
# Ruff replaces black (formatting), isort (imports), and flake8 + flake8-docstrings (linting).
line-length = 88
target-version = "py310"
extend-exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear,
# C4: comprehensions, SIM: simplify, D: pydocstyle.
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "D"]
ignore = [
    "E501",  # line length handled by the formatter
    "E203",  # whitespace before ':' (formatter-compatible)
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests need not be docstringed.
"tests/**" = ["D"]
"test_*.py" = ["D", "E402"]
# Teaching examples and illustrative NKI kernels are optimized for readability, not as a
# maintained library: relax docstring rules and the "import not at top" rule (examples often
# import lazily inside functions to keep optional heavy deps out of the import path). Real
# correctness rules (F, B, E7xx, SIM, UP) still apply.
# Examples intentionally show "here is what you import" at the top even when the runnable body
# uses mocked/placeholder paths, and are written as linear scripts (occasional re-import in a
# later section). Relax F401/F811 there; real bug rules (E7xx, B, F8xx, SIM, UP) still apply.
"examples/**" = ["D", "E402", "F401", "F811"]
"advanced/**" = ["D", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["aws_trainium_tutorial", "scripts", "examples", "advanced"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "boto3.*",
    "botocore.*",
    "faiss.*",
    "rdkit.*",
    "Bio.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
# Tutorial scripts are flat modules imported directly in tests (e.g. `from cost_monitor import ...`).
pythonpath = ["scripts", "examples", "advanced", "."]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "aws: marks tests that require AWS credentials (deselect with '-m \"not aws\"')",
    "neuron: marks tests that require Neuron SDK (deselect with '-m \"not neuron\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["scripts", "examples", "advanced", "validation"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/easter_eggs/*",  # Easter eggs are experimental
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    # AWS-specific exclusions
    "except ClientError:",
    "except NoCredentialsError:",
    "# Placeholder for actual implementation",
]
fail_under = 85
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
